--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.0.0",
   "license": "MIT",
+  "main" : "server.js",
   "engines": {
     "node": "8.9.4",
     "npm": "5.6.0"
@@ -30,10 +31,10 @@
     "express": "^4.16.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/cli": "1.6.6"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
