--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "portfolio",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "main":"app.js",
-  "engines":{
-    "node": "8.9.4",
-    "npm": "5.6.0"
-  },
   "scripts": {
     "ng": "ng",
     "start": "node app.js",
-    "build": "ng build --prod",
+    "build": "ng build -prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot -prod"
   },
-  "private": true,
+    "engines":{
+    "node": "8.9.4",
+    "npm": "5.6.0"
+  },
   "dependencies": {
     "@angular/cli": "1.6.6",
     "@angular/compiler-cli": "^5.2.0",
